@@ -1,155 +1,181 @@
 package com.example.backend.service.impl;
 
 import com.example.backend.model.Event;
-import com.example.backend.model.Location;
 import com.example.backend.model.Task;
-import com.example.backend.model.TravelTime;
-import com.example.backend.model.TravelTime.TransportMode;
 import com.example.backend.model.User;
 import com.example.backend.repository.EventRepository;
 import com.example.backend.repository.TaskRepository;
-import com.example.backend.service.TravelTimeService;
 import com.example.backend.service.strategy.TaskSelectionStrategy;
+import com.example.backend.service.TravelTimeService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class DefaultScheduleOptimizerServiceTest {
 
-    @Mock
-    private EventRepository eventRepository;
-    @Mock
-    private TaskRepository taskRepository;
-    @Mock
-    private TaskSelectionStrategy taskSelectionStrategy;
-    @Mock
-    private TravelTimeService travelTimeService;
+    @Mock private EventRepository eventRepository;
+    @Mock private TaskRepository taskRepository;
+    @Mock private TaskSelectionStrategy taskSelectionStrategy;
+    @Mock private TravelTimeService travelTimeService;
+    @Mock private FocusService focusService;
 
+    @InjectMocks
     private DefaultScheduleOptimizerService optimizerService;
 
-    private Event cancelledEvent;
     private User user;
+    private Long userId = 1L;
 
     @BeforeEach
     void setUp() {
-        // Initialisation manuelle
-        optimizerService = new DefaultScheduleOptimizerService(
-            eventRepository,
-            taskRepository,
-            taskSelectionStrategy,
-            travelTimeService
-        );
-
-        user = new User("testuser", "pwd");
-        user.setId(1L);
-
-        // Event de 10h à 11h (60 min de libre)
-        cancelledEvent = new Event("Cancelled Meeting", 
-                LocalDateTime.of(2025, 1, 1, 10, 0),
-                LocalDateTime.of(2025, 1, 1, 11, 0), 
-                user);
-        cancelledEvent.setId(100L);
-        
-        // CORRECTION : Utilisation d'une adresse valide (> 10 caractères, avec virgule)
-        cancelledEvent.setLocation(new Location("10 Rue de la Paix, 75002 Paris, France"));
-        
-        // Configuration par défaut
-        lenient().when(eventRepository.findAll()).thenReturn(Collections.emptyList());
+        user = new User("testuser", "password");
+        user.setId(userId);
     }
 
+    /**
+     * Test de base : vérifie que si tout est libre, les tâches sont planifiées
+     * les unes après les autres à partir de l'heure du curseur (8h).
+     */
     @Test
-    void testReshuffle_EventNotFound() {
-        when(eventRepository.findById(100L)).thenReturn(Optional.empty());
-
-        assertThrows(IllegalArgumentException.class, () -> optimizerService.reshuffle(100L));
-    }
-
-    @Test
-    void testReshuffle_NoTaskSelected() {
-        when(eventRepository.findById(100L)).thenReturn(Optional.of(cancelledEvent));
-        when(taskSelectionStrategy.selectTask(eq(1L), anyLong())).thenReturn(null);
-
-        optimizerService.reshuffle(100L);
-
-        assertEquals("CANCELLED", cancelledEvent.getStatus());
-        verify(eventRepository).save(cancelledEvent);
-
-        ArgumentCaptor<Event> eventCaptor = ArgumentCaptor.forClass(Event.class);
-        verify(eventRepository, atLeastOnce()).save(eventCaptor.capture());
-        
-        boolean createdNewEvent = eventCaptor.getAllValues().stream()
-                .anyMatch(e -> !e.getId().equals(100L));
-        
-        assertFalse(createdNewEvent, "Aucun nouvel événement n'aurait dû être créé");
-    }
-
-    @Test
-    void testReshuffle_WithTaskAndNoTravelNeeded() {
-        when(eventRepository.findById(100L)).thenReturn(Optional.of(cancelledEvent));
-        
-        Task task = new Task("New Task", 45, 1, false, user, (LocalDateTime) null);
-        when(taskSelectionStrategy.selectTask(eq(1L), anyLong())).thenReturn(task);
-
-        optimizerService.reshuffle(100L);
-
-        assertEquals("CANCELLED", cancelledEvent.getStatus());
-        
-        ArgumentCaptor<Event> eventCaptor = ArgumentCaptor.forClass(Event.class);
-        verify(eventRepository, atLeast(2)).save(eventCaptor.capture());
-        
-        Optional<Event> newEvent = eventCaptor.getAllValues().stream()
-                .filter(e -> "New Task".equals(e.getSummary()))
-                .findFirst();
-        
-        assertTrue(newEvent.isPresent(), "Le nouvel événement 'New Task' aurait dû être sauvegardé");
-    }
-
-    @Test
-    void testReshuffle_WithTravelTime() {
+    void devraitPlanifierTachesALaSuiteSiToutEstLibre() {
         // Given
-        Event nextEvent = new Event("Next Event", 
-                LocalDateTime.of(2025, 1, 1, 12, 0), 
-                LocalDateTime.of(2025, 1, 1, 13, 0), user);
+        Task t1 = createSimpleTask("Tâche 1", 60, 1);
+        Task t2 = createSimpleTask("Tâche 2", 30, 2);
         
-        // Adresse valide pour le validateur
-        nextEvent.setLocation(new Location("Place Bellecour, 69002 Lyon, France"));
-
-        when(eventRepository.findById(100L)).thenReturn(Optional.of(cancelledEvent));
-        when(eventRepository.findAll()).thenReturn(List.of(cancelledEvent, nextEvent));
-        
-        TravelTime mockTravelTime = new TravelTime();
-        mockTravelTime.setDurationMinutes(15);
-        // Important : Mock doit répondre à n'importe quel appel
-        when(travelTimeService.createTravelTime(any(), any(), any())).thenReturn(mockTravelTime);
-
-        Task task = new Task("Quick Task", 30, 1, false, user, (LocalDateTime) null);
-        when(taskSelectionStrategy.selectTask(eq(1L), anyLong())).thenReturn(task);
+        when(eventRepository.findByUser_IdOrderByStartTime(userId)).thenReturn(new ArrayList<>());
+        when(taskRepository.findByUser_Id(userId)).thenReturn(new ArrayList<>(Arrays.asList(t1, t2)));
+        when(focusService.estBloqueParLeFocus(eq(userId), any(), any())).thenReturn(false);
 
         // When
-        optimizerService.reshuffle(100L);
+        optimizerService.reshuffle(userId);
 
         // Then
-        // CORRECTION ICI : on attend 2 appels (1 pour l'estimation, 1 pour la création finale)
-        verify(travelTimeService, times(2)).createTravelTime(any(), eq(nextEvent), eq(TransportMode.DRIVING));
+        verify(eventRepository, times(2)).save(any(Event.class));
+        verify(taskRepository, times(2)).save(any(Task.class));
+        assertNotNull(t1.getEvent());
+        assertNotNull(t2.getEvent());
+        // T2 doit commencer à la fin de T1
+        assertEquals(t1.getEvent().getEndTime(), t2.getEvent().getStartTime());
+    }
+
+    /**
+     * Vérifie que l'algorithme respecte l'ordre de priorité : 
+     * Deadline la plus proche d'abord, puis priorité la plus haute.
+     */
+    @Test
+    void devraitRespecterOrdrePrioriteEtDeadline() {
+        // Given
+        LocalDateTime demain = LocalDateTime.now().plusDays(1);
+        Task peuPrioritaire = createSimpleTask("Pas pressé", 60, 5); // Priorité basse
+        Task urgente = createSimpleTask("Urgente", 60, 1);
+        urgente.setDeadline(demain); // Deadline proche
+
+        when(eventRepository.findByUser_IdOrderByStartTime(userId)).thenReturn(new ArrayList<>());
+        when(taskRepository.findByUser_Id(userId)).thenReturn(new ArrayList<>(Arrays.asList(peuPrioritaire, urgente)));
+        when(focusService.estBloqueParLeFocus(eq(userId), any(), any())).thenReturn(false);
+
+        // When
+        optimizerService.reshuffle(userId);
+
+        // Then : "Urgente" doit être planifiée avant "Pas pressé"
+        assertTrue(urgente.getEvent().getStartTime().isBefore(peuPrioritaire.getEvent().getStartTime()));
+    }
+
+    /**
+     * LE TEST CRUCIAL : Vérifie que le reshuffle saute une zone où le Focus est activé.
+     */
+    @Test
+    void devraitSauterZoneDeFocusPendantLeReshuffle() {
+        // Given
+        Task task = createSimpleTask("Tâche Focus", 60, 1);
         
-        ArgumentCaptor<Event> eventCaptor = ArgumentCaptor.forClass(Event.class);
-        verify(eventRepository, atLeastOnce()).save(eventCaptor.capture());
+        when(eventRepository.findByUser_IdOrderByStartTime(userId)).thenReturn(new ArrayList<>());
+        when(taskRepository.findByUser_Id(userId)).thenReturn(new ArrayList<>(List.of(task)));
+
+        // Simulation : Le focus bloque le premier créneau testé, mais accepte le suivant
+        when(focusService.estBloqueParLeFocus(eq(userId), any(), any()))
+            .thenReturn(true)  // Bloqué au début
+            .thenReturn(false); // Libre après décalage
+
+        // When
+        optimizerService.reshuffle(userId);
+
+        // Then
+        verify(focusService, atLeast(2)).estBloqueParLeFocus(eq(userId), any(), any());
+        assertNotNull(task.getEvent());
+        verify(eventRepository).save(any(Event.class));
+    }
+
+    /**
+     * Vérifie que l'algorithme ne planifie pas une tâche sur une réunion existante.
+     */
+    @Test
+    void devraitSauterReunionsExistantes() {
+        // Given - On place la réunion pile au début (08h00) pour forcer le saut
+        LocalDateTime debutReunion = LocalDateTime.now().withHour(8).withMinute(0).withSecond(0).withNano(0);
+        LocalDateTime finReunion = debutReunion.plusHours(1); // Finit à 09h00
         
-        boolean taskSaved = eventCaptor.getAllValues().stream()
-                .anyMatch(e -> "Quick Task".equals(e.getSummary()));
-        assertTrue(taskSaved, "L'événement 'Quick Task' aurait dû être sauvegardé");
+        Event reunion = new Event("Réunion Matinale", debutReunion, finReunion, user);
+        
+        Task task = createSimpleTask("Tâche après réunion", 60, 1);
+
+        when(eventRepository.findByUser_IdOrderByStartTime(userId)).thenReturn(new ArrayList<>(List.of(reunion)));
+        when(taskRepository.findByUser_Id(userId)).thenReturn(new ArrayList<>(List.of(task)));
+        when(focusService.estBloqueParLeFocus(eq(userId), any(), any())).thenReturn(false);
+
+        // When
+        optimizerService.reshuffle(userId);
+
+        // Then
+        assertNotNull(task.getEvent(), "La tâche devrait être planifiée");
+        // La tâche doit commencer au plus tôt à 09h00 (fin de la réunion)
+        assertTrue(task.getEvent().getStartTime().isAfter(reunion.getEndTime()) 
+                || task.getEvent().getStartTime().equals(reunion.getEndTime()),
+                "La tâche devrait commencer à " + reunion.getEndTime() + " mais commence à " + task.getEvent().getStartTime());
+    }
+
+    /**
+     * Vérifie que les tâches dont la deadline est passée sont marquées "Late"
+     * et ne sont pas planifiées.
+     */
+    @Test
+    void devraitMarquerTacheEnRetardSiDeadlineDepassee() {
+        // Given
+        Task taskEnRetard = createSimpleTask("Tâche périmée", 60, 1);
+        taskEnRetard.setDeadline(LocalDateTime.now().minusDays(1)); // Deadline hier
+
+        when(eventRepository.findByUser_IdOrderByStartTime(userId)).thenReturn(new ArrayList<>());
+        when(taskRepository.findByUser_Id(userId)).thenReturn(new ArrayList<>(List.of(taskEnRetard)));
+
+        // When
+        optimizerService.reshuffle(userId);
+
+        // Then
+        assertTrue(taskEnRetard.isLate());
+        assertNull(taskEnRetard.getEvent());
+        verify(taskRepository).save(taskEnRetard);
+    }
+
+    // Helper pour créer des tâches rapidement
+    private Task createSimpleTask(String title, int duration, int priority) {
+        // On précise (LocalDateTime) devant le null pour lever l'ambiguïté
+        Task t = new Task(title, duration, priority, false, user, (LocalDateTime) null);
+        t.setId((long) (Math.random() * 1000));
+        return t;
     }
 }
